@@ -1,0 +1,10 @@
+<?xml version = '1.0' encoding = 'UTF-8'?>
+<model name="house3">
+  <submodels>
+    <submodel mesh="3d_objects/items/building_primitives/models/butchers_house/butchers_house.mesh" >
+      <parts>
+        <part name="house3" show="true" />
+      </parts>
+    </submodel>
+  </submodels>
+</model>
