@@ -1,0 +1,10 @@
+<?xml version = '1.0' encoding = 'UTF-8'?>
+<model name="table" usescaleof="height"  >
+  <submodels>
+    <submodel mesh="3d_objects/items/furniture/models/table/simple_table.mesh" >
+      <parts>
+        <part name="main" show="true" >
+      </parts>
+    </submodel>
+  </submodels>
+</model>
